# fanyi

./: .gitignore  Cargo.toml  PKGBUILD
.github/workflows/: rustbuild.yml
src/: main.rs
