[package]
name = "fanyi"
version = "0.1.0"
authors = ["jialanxin <jialanxin1996@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11"}
serde_json = "1.0"
ansi_term = "0.12.1"

[profile.release]
lto = true